...
                            <constraint firstItem="yEp-DO-cuT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="HBW-6o-qeJ"/>
                            <constraint firstItem="yEp-DO-cuT" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="LqH-cB-CEv"/>
                            <constraint firstItem="yEp-DO-cuT" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="p0X-c6-7LI"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Tweets" image="tweet" id="S6z-hr-caM"/>
                    <navigationItem key="navigationItem" id="5DO-om-otC"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="tweetView"/>
                    </userDefinedRuntimeAttributes>
                    <connections>
                        <outlet property="tweetTableView" destination="yEp-DO-cuT" id="1Ak-C7-JPy"/>
...
                            <constraint firstItem="dgU-e1-WqR" firstAttribute="top" secondItem="MJt-tc-FcF" secondAttribute="top" id="QaT-9e-eGc"/>
                            <constraint firstItem="MJt-tc-FcF" firstAttribute="bottom" secondItem="dgU-e1-WqR" secondAttribute="bottom" id="T5O-UQ-SXV"/>
                            <constraint firstItem="dgU-e1-WqR" firstAttribute="leading" secondItem="MJt-tc-FcF" secondAttribute="leading" id="jhJ-ml-HEQ"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="MJt-tc-FcF"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Bookmarks" image="bookmark" id="3Mp-lL-uEj"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="bookmarkView"/>
                    </userDefinedRuntimeAttributes>
                    <connections>
                        <outlet property="bookmarkTableView" destination="dgU-e1-WqR" id="X2Q-XA-0Jh"/>
                    </connections>
...
